# metadata

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  vix.json
cmake/: softadastra_metadataConfig.cmake.in
examples/: CMakeLists.txt
include/softadastra/metadata/: MetadataOptions.hpp  MetadataService.hpp  metadata.hpp
include/softadastra/metadata/backend/: IMetadataProvider.hpp
include/softadastra/metadata/core/: MetadataConfig.hpp  MetadataContext.hpp  NodeCapabilities.hpp  NodeIdentity.hpp  NodeMetadata.hpp  NodeRuntimeInfo.hpp
include/softadastra/metadata/encoding/: MetadataDecoder.hpp  MetadataEncoder.hpp
include/softadastra/metadata/engine/: MetadataEngine.hpp
include/softadastra/metadata/registry/: MetadataRegistry.hpp
include/softadastra/metadata/types/: CapabilityType.hpp  MetadataField.hpp  MetadataStatus.hpp
include/softadastra/metadata/utils/: Hostname.hpp  PlatformInfo.hpp  VersionInfo.hpp
src/: MetadataService.cpp
tests/: CMakeLists.txt
